--- a/iop_costmap2d_fkie/CMakeLists.txt
+++ b/iop_costmap2d_fkie/CMakeLists.txt
@@ -5,9 +5,7 @@ project(iop_costmap2d_fkie)
 ## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
 ## is used, also find other catkin packages
 find_package(catkin REQUIRED COMPONENTS
-      iop_accesscontrol_1_0_fkie
-      iop_builder_fkie
-      iop_component_fkie
+      iop_accesscontrol_fkie
       nav_msgs
       roscpp
       tf
@@ -21,9 +19,7 @@ catkin_package(
     INCLUDE_DIRS include/${PROJECT_NAME}
     LIBRARIES ${PROJECT_NAME}
     CATKIN_DEPENDS
-        iop_accesscontrol_1_0_fkie
-        iop_builder_fkie
-        iop_component_fkie
+        iop_accesscontrol_fkie
         nav_msgs
 )
 
@@ -40,30 +36,28 @@ iop_code_generator(
     urn.jaus.jss.iop/CostMap2D_V2.xml
   OWN_IDLS
   OVERRIDES
-    include/urn_jaus_jss_iop_CostMap2D_1_0/CostMap2D_ReceiveFSM.h
-    src/urn_jaus_jss_iop_CostMap2D_1_0/CostMap2D_ReceiveFSM.cpp
+    include/urn_jaus_jss_iop_CostMap2D/CostMap2D_ReceiveFSM.h
+    src/urn_jaus_jss_iop_CostMap2D/CostMap2D_ReceiveFSM.cpp
     src/main.cpp
   EXTERN_SERVICES
-    urn_jaus_jss_core_AccessControl_1_0
-    urn_jaus_jss_core_Events_1_0
-    urn_jaus_jss_core_Transport_1_0
+    urn_jaus_jss_core_AccessControl
+    urn_jaus_jss_core_Events
+    urn_jaus_jss_core_Transport
   GENERATED_SOURCES cppfiles
 )
 
 include_directories(
     ${catkin_INCLUDE_DIRS}
-    ${IOP_INCLUDE_DIRS}
     include/${PROJECT_NAME}
 )
 add_library(${PROJECT_NAME}
-            src/CostMap2DPlugin_1_0.cpp
+            src/CostMap2DPlugin.cpp
             ${cppfiles}
 )
 
 ## Specify libraries to link a library or executable target against
 target_link_libraries(${PROJECT_NAME}
                       ${catkin_LIBRARIES}
-                      ${IOP_LIBRARIES}
 )
 
 #############
