--- a/iop_measurement_sensor_fkie/package.xml
+++ b/iop_measurement_sensor_fkie/package.xml
@@ -1,19 +1,19 @@
 <?xml version="1.0"?>
-<package>
+<package format="2">
   <name>iop_measurement_sensor_fkie</name>
   <version>1.1.0</version>
   <description>Translation of the measurement values to/from ROS</description>
 
+  <author>Alexander Tiderko</author>
   <maintainer email="alexander.tiderko@fkie.fraunhofer.de">Alexander Tiderko</maintainer>
   <license>GPLv2</license>
   <url type="website">https://github.com/fkie/iop_sensing</url>
 
   <buildtool_depend>catkin</buildtool_depend>
-  <build_depend>iop_events_fkie</build_depend>
-  <build_depend>roscpp</build_depend>
-  <run_depend>iop_events_fkie</run_depend>
-  <run_depend>iop_component_fkie</run_depend>
-  <run_depend>iop_msgs_fkie</run_depend>
+  <depend>iop_component_fkie</depend>
+  <depend>iop_events_fkie</depend>
+  <depend>iop_msgs_fkie</depend>
+  <depend>roscpp</depend>
 
   <export>
     <iop_component_fkie plugin="${prefix}/plugin_iop.xml" />
