--- a/fkie_iop_costmap2d/package.xml
+++ b/fkie_iop_costmap2d/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>fkie_iop_costmap2d</name>
   <version>1.1.0</version>
   <description>ROS costmap is translated by this service to the JAUS network</description>
@@ -8,16 +8,19 @@
   <license>GPLv2</license>
   <url type="website">https://github.com/fkie/iop_sensing</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>fkie_iop_accesscontrol</depend>
-  <depend>fkie_iop_component</depend>
   <depend>nav_msgs</depend>
-  <depend>roscpp</depend>
   <depend>tf2</depend>
   <depend>tf2_geometry_msgs</depend>
+  <depend>tf2_ros</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
