--- a/fkie_iop_path_reporter/CMakeLists.txt
+++ b/fkie_iop_path_reporter/CMakeLists.txt
@@ -1,39 +1,33 @@
-cmake_minimum_required(VERSION 3.0.2)
+cmake_minimum_required(VERSION 3.5)
 project(fkie_iop_path_reporter)
 
-## Find catkin macros and libraries
-## if COMPONENTS list like find_package(catkin REQUIRED COMPONENTS xyz)
-## is used, also find other catkin packages
-find_package(catkin REQUIRED COMPONENTS
-             fkie_iop_component
-             fkie_iop_events
-             geographic_msgs
-             gps_common
-             roscpp
-             tf)
+# Default to C99
+if(NOT CMAKE_C_STANDARD)
+  set(CMAKE_C_STANDARD 99)
+endif()
 
-iop_init(COMPONENT_ID 0)
-iop_export_service(urn_jaus_jss_iop_PathReporter)
+# Default to C++14
+if(NOT CMAKE_CXX_STANDARD)
+  set(CMAKE_CXX_STANDARD 14)
+endif()
 
-###################################
-## catkin specific configuration ##
-###################################
-catkin_package(
-    LIBRARIES ${PROJECT_NAME}
-    CATKIN_DEPENDS
-        fkie_iop_component
-        fkie_iop_events
-        geographic_msgs
-        gps_common
-        roscpp
-        tf
+if(CMAKE_COMPILER_IS_GNUCXX OR CMAKE_CXX_COMPILER_ID MATCHES "Clang")
+  add_compile_options(-Wall -Wextra -Wpedantic -Wno-ignored-qualifiers)
+endif()
+
+find_package(ament_cmake REQUIRED)
+find_package(fkie_iop_events REQUIRED)
+find_package(geographic_msgs REQUIRED)
+find_package(tf2 REQUIRED)
+find_package(tf2_ros REQUIRED)
+
+###############
+## setup IOP ##
+###############
+iop_init()
+iop_export_service(
+  urn_jaus_jss_iop_PathReporter
 )
-
-###########
-## Build ##
-###########
-
-## Specify additional locations of header files
 iop_code_generator(
   IDLS
     urn.jaus.jss.core-v1.1/Events.xml
@@ -43,38 +37,52 @@ iop_code_generator(
   OVERRIDES
     include/urn_jaus_jss_iop_PathReporter/PathReporter_ReceiveFSM.h
     src/urn_jaus_jss_iop_PathReporter/PathReporter_ReceiveFSM.cpp
-    src/main.cpp
   EXTERN_SERVICES
     urn_jaus_jss_core_Events
     urn_jaus_jss_core_Transport
   GENERATED_SOURCES cppfiles
 )
 
-include_directories(${catkin_INCLUDE_DIRS})
+###########
+## Build ##
+###########
+set(dependencies
+  fkie_iop_events
+  geographic_msgs
+  tf2
+  tf2_ros
+)
 
-add_library(${PROJECT_NAME}
-            src/PathReporterPlugin.cpp
+include_directories(
+  ${IOP_COMPONENT_INCLUDE_DIRS}
+)
+
+add_library(${PROJECT_NAME} SHARED
             ${cppfiles}
 )
 
-## Specify libraries to link a library or executable target against
-target_link_libraries(${PROJECT_NAME}
-                      ${catkin_LIBRARIES}
-)
+ament_target_dependencies(${PROJECT_NAME} ${dependencies})
 
 #############
 ## Install ##
 #############
 
-install(TARGETS ${PROJECT_NAME}
-  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
-  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
-)
-
-## Mark other files for installation (e.g. launch and bag files, etc.)
 install(
-   FILES ./plugin_iop.xml
-   DESTINATION ${CATKIN_PACKAGE_SHARE_DESTINATION}
+  DIRECTORY ${IOP_INSTALL_INCLUDE_DIRS}
+  DESTINATION include/${PROJECT_NAME}
+  PATTERN "*.old" EXCLUDE
+  PATTERN "*.gen" EXCLUDE
 )
 
+install(TARGETS ${PROJECT_NAME}
+  ARCHIVE DESTINATION lib
+  LIBRARY DESTINATION lib
+  RUNTIME DESTINATION lib/${PROJECT_NAME}
+)
+
+ament_export_include_directories(include ${IOP_COMPONENT_INCLUDE_DIRS})
+ament_export_libraries(${PROJECT_NAME})
+ament_export_dependencies(${dependencies})
+pluginlib_export_plugin_description_file(fkie_iop_component plugin_iop.xml)
+
+ament_package()
