--- a/fkie_iop_path_reporter/package.xml
+++ b/fkie_iop_path_reporter/package.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0"?>
-<package format="2">
+<package format="3">
   <name>fkie_iop_path_reporter</name>
   <version>1.1.0</version>
   <description>Service provides a mechanism for reporting the past and/or future expected path of the vehicle.</description>
@@ -9,16 +9,18 @@
   <license>GPLv2</license>
   <url type="website">https://github.com/fkie/iop_sensing</url>
 
-  <buildtool_depend>catkin</buildtool_depend>
-  <depend>gps_common</depend>
-  <depend>geographic_msgs</depend>
-  <depend>fkie_iop_component</depend>
+  <buildtool_depend>ament_cmake</buildtool_depend>
+
   <depend>fkie_iop_events</depend>
-  <depend>roscpp</depend>
-  <depend>tf</depend>
+  <depend>geographic_msgs</depend>
+  <depend>tf2</depend>
+  <depend>tf2_ros</depend>
+
+  <test_depend>ament_lint_auto</test_depend>
+  <test_depend>ament_lint_common</test_depend>
 
   <export>
-    <fkie_iop_component plugin="${prefix}/plugin_iop.xml" />
+    <build_type>ament_cmake</build_type>
   </export>
 
 </package>
