path_reporter: fix for transformation of the local path

--- a/fkie_iop_path_reporter/CMakeLists.txt
+++ b/fkie_iop_path_reporter/CMakeLists.txt
@@ -18,6 +18,8 @@ endif()
 find_package(ament_cmake REQUIRED)
 find_package(fkie_iop_events REQUIRED)
 find_package(geographic_msgs REQUIRED)
+find_package(geometry_msgs REQUIRED)
+find_package(nav_msgs REQUIRED)
 find_package(tf2 REQUIRED)
 find_package(tf2_ros REQUIRED)
 
@@ -49,6 +51,8 @@ iop_code_generator(
 set(dependencies
   fkie_iop_events
   geographic_msgs
+  geometry_msgs
+  nav_msgs
   tf2
   tf2_ros
 )
