--- a/fkie_iop_path_reporter/package.xml
+++ b/fkie_iop_path_reporter/package.xml
@@ -13,6 +13,8 @@
 
   <depend>fkie_iop_events</depend>
   <depend>geographic_msgs</depend>
+  <depend>geometry_msgs</depend>
+  <depend>nav_msgs</depend>
   <depend>tf2</depend>
   <depend>tf2_ros</depend>
 
