--- a/fkie_iop_path_reporter/CMakeLists.txt
+++ b/fkie_iop_path_reporter/CMakeLists.txt
@@ -21,6 +21,7 @@ find_package(geographic_msgs REQUIRED)
 find_package(geometry_msgs REQUIRED)
 find_package(nav_msgs REQUIRED)
 find_package(tf2 REQUIRED)
+find_package(tf2_geometry_msgs REQUIRED)
 find_package(tf2_ros REQUIRED)
 
 ###############
@@ -54,6 +55,7 @@ set(dependencies
   geometry_msgs
   nav_msgs
   tf2
+  tf2_geometry_msgs
   tf2_ros
 )
 
